# pytest-adversarial

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_PYPI.md  check_results.sh  demo.ipynb  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  start.sh
.github/workflows/: ci.yml
examples/json_parser/: target.py  target_evolved.py  target_evolved_drq.py
examples/url_parser/: target.py
experiments/: convergent_evolution.py  model_benchmark.py
pytest_adversarial/: ach.py  agents.py  archive.py  archive_v2.py  cli.py  fitness.py  novelty.py
src/: ach.py  agents.py  archive.py  archive_v2.py  config.py  demo.cast  drq.py  export.py  fitness.py  novelty.py  utils.py  visualize.py
tests/: test_agents.py  test_archive.py  test_fitness.py
