[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-adversarial"
version = "0.1.0"
description = "A pytest plugin for adversarial testing with AI-powered inputs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "pytest-adversarial contributors"}
]
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "matplotlib>=3.7.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
]

[project.entry-points.pytest11]
pytest_adversarial = "pytest_adversarial.plugin"

[tool.setuptools]
packages = ["pytest_adversarial"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
